--- a/dailypic.html
+++ b/dailypic.html
@@ -3,22 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Another day, another organ</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Organ Daily Image</title>
+    <link rel="stylesheet" href="dailypic.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <header>
-        <h1>Another day, another organ</h1>
-        <p>Every day, there is a different image of pipe organs from around the world</p>
+        <h1>Today's Organ: 1999 John Paul Buzard Opus 21, Glenview Community Church</h1>
     </header>
-
-    <a class="gradient-circle" href="dailypic.html" target="_blank">VIEW TODAY'S ORGAN</a>
-    <a class="gradient-circle-2" href="calendar.html" target="_blank">VIEW THE CALENDAR</a>
-
-    <script src="script.js"></script>
 </body>
